# claude-toolstack

./: .env.example  .gitignore  CHANGELOG.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SECURITY.md  SHIP_GATE.md  compose.yaml  pyproject.toml  repos.yaml
cts/: __init__.py  __main__.py  autopilot.py  bundle.py  cli.py  confidence.py  config.py  ctags.py  diff_context.py  errors.py  http.py  ranking.py  render.py  schema.py  sidecar.py  structural.py
docs/: HANDBOOK.md  autopilot.md  ci-artifacts.md  corpus.md  experiments.md  registry.md  sidecar.md  tuning.md
gateway/: Dockerfile  main.py  requirements.txt
nginx/: gateway.conf
scripts/: add-repo.sh  bootstrap.sh  cts-docker  gen_test_sidecar.py  health.sh  policy-lint.sh  pr_comment_sidecar.py  smoke-test.sh  triage.sh  verify.sh
site/: astro.config.mjs
systemd/: 99-claude-dev.conf  99-inotify-large-repos.conf  claude-build.slice  claude-gw.slice  claude-index.slice  claude-lsp.slice  claude-toolstack.service  claude-vector.slice  daemon.json  zram-generator.conf
tests/: test_apply.py  test_archive.py  test_autopilot.py  test_baseline.py  test_bundle.py  test_candidates.py  test_confidence.py  test_corpus.py  test_ctags.py  test_diff_context.py  test_doctor.py  test_errors.py  test_evaluate.py  test_experiment_eval.py  test_experiment_schema.py  test_narrowing.py  test_patch.py  test_ranking.py  test_registry.py  test_registry_policy.py  test_schema.py  test_semantic_autopilot.py  test_semantic_scaffold.py  test_semantic_search_cli.py  (+4 more)
(+44 files in other folders)
