[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-toolstack-cli"
version = "0.2.0"
description = "CLI client for Claude Toolstack gateway"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
# No external dependencies — stdlib only (urllib, json, argparse, uuid)

[project.optional-dependencies]
semantic = ["numpy>=1.24", "sentence-transformers>=2.2"]

[project.scripts]
cts = "cts.cli:main"

[tool.setuptools.packages.find]
include = ["cts*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
